Fixed bar size on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -73,10 +73,12 @@ body {
     display: flex;
     flex-direction: row;
     font-size: 1.2rem;
+    width: 100%;
+    max-width: 400px;
+    justify-content: space-between;
 }
 
 .main-nav li {
-    margin: 30px;
 }
 
 .main-nav a {
@@ -98,6 +100,10 @@ body {
     .title {
         font-size: 2rem;
         margin-top: -100px;
+    }
+
+    .decorator-bar {
+        height: 10px;
     }
 }
 
